added functionality for restore the transaction based on origin and updated swagger
